# agentguard

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
docs/: adapters.md  ai-driven-adoption.md  ci-integration.md  launch-post.md  quickstart.md  suite-layout.md
docs-site/: mkdocs.yml
docs-site/docs/: index.md  quickstart.md
examples/quickstart/: README.md  agent.py  suite.py
examples/quickstart/.agentguard/baselines/customer_support/: missing_order_number.json  non_refundable_order.json  policy_question_no_tools.json  refund_happy_path.json
examples/quickstart/.tracediff/baselines/customer_support/: missing_order_number.json  non_refundable_order.json  policy_question_no_tools.json  refund_happy_path.json
quickstart/: index.html
search/: search_index.json
src/agentguard/: __init__.py  cli.py  core.py  loader.py  reporters.py  runner.py  store.py
src/agentguard/graders/: __init__.py  semantic.py
src/agentprdiff/: __init__.py  cli.py  core.py  differ.py  filtering.py  loader.py  reporters.py  runner.py  scaffold.py  store.py
src/agentprdiff/adapters/: openai.py
src/agentprdiff/graders/: __init__.py  deterministic.py  semantic.py
tests/: conftest.py  test_adapter_openai_async.py  test_cli.py  test_differ.py  test_filtering.py  test_graders.py  test_review.py  test_runner.py  test_scaffold.py  test_store.py
